--- a/deployment.yml
+++ b/deployment.yml
@@ -1,4 +1,4 @@
 - hosts: appserver
   tasks:
   - name: Copying data from Jenkins to Tomcat server
-    copy: src=${WORKSPACE}/target/JenkinsWar dest=/usr/local/tomcat9/webapps/
+    copy: src=target/JenkinsWar dest=/usr/local/tomcat9/webapps/
